lanecwe-Prod/src/objects/Offerings__c.object
<CustomObject>
    <description>This object is used for E-commerce and LMS product mappings</description>
    <fields>
        <fullName>Annual_Billable_Item_Code__c</fullName>
        <label>Annual Billable Item Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_EID__c</fullName>
        <label>Annual EID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Enterprise_ID__c</fullName>
        <label>Annual Enterprise ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Minute_Charge__c</fullName>
        <label>Annual Minute Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_PROMO__c</fullName>
        <label>Annual PROMO</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Promo_Code__c</fullName>
        <label>Annual Promo Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_SKU__c</fullName>
        <label>Annual SKU</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_SOTS__c</fullName>
        <label>Annual SOTS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_cboxPackageDetails__c</fullName>
        <label>Annual cboxPackageDetails</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Anuual_Enterprise__c</fullName>
        <label>Anuual Enterprise</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audio_Minutes__c</fullName>
        <label>Audio Minutes</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audio__c</fullName>
        <label>Audio</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billable_Item_Code__c</fullName>
        <label>Billable Item Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_frequency__c</fullName>
        <label>Billing frequency</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discounted_Price__c</fullName>
        <label>Discounted Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Enterprise_ID__c</fullName>
        <label>Enterprise ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minute_Charge__c</fullName>
        <label>Minute Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Billable_Item_Code__c</fullName>
        <label>Monthly Billable Item Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_EID__c</fullName>
        <label>Monthly EID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Enterprise_ID__c</fullName>
        <label>Monthly Enterprise ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Enterprise__c</fullName>
        <label>Monthly Enterprise</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Minute_Charge__c</fullName>
        <label>Monthly Minute Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Promo_Code__c</fullName>
        <label>Monthly Promo Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Promo__c</fullName>
        <label>Monthly PROMO</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_SKU__c</fullName>
        <label>Monthly SKU</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_SOTS__c</fullName>
        <label>Monthly SOTS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_cboxPackageDetails__c</fullName>
        <label>Monthly cboxPackageDetails</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Participants__c</fullName>
        <label>Participants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <label>Plan Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <label>Promo Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <label>SKU</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage__c</fullName>
        <label>Storage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VOIP__c</fullName>
        <label>VOIP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_Feeds__c</fullName>
        <label>Video Feeds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cboxPackageDetails__c</fullName>
        <label>cboxPackageDetails</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>planteaser__c</fullName>
        <label>planteaser</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>price_yearly__c</fullName>
        <label>price yearly</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <label>Offerings</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Billing_frequency__c</columns>
        <columns>Annual_Enterprise_ID__c</columns>
        <columns>Annual_EID__c</columns>
        <columns>Enterprise_ID__c</columns>
        <columns>Monthly_EID__c</columns>
        <columns>Monthly_Enterprise_ID__c</columns>
        <columns>Plan_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Enterprise Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offerings</pluralLabel>
    <recordTypes>
        <fullName>Global_Meet</fullName>
        <active>true</active>
        <description>It shows fields related to Global Meet only</description>
        <label>Global Meet</label>
    </recordTypes>
    <recordTypes>
        <fullName>Imeet</fullName>
        <active>true</active>
        <description>It shows fields related to IMeet only</description>
        <label>Imeet</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>